--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrador Investigador</title>
-    <link rel="stylesheet" href="./formularioRegistro.css">
+    <link rel="stylesheet" href="./estilos/formularioRegistro.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=B612:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./navbar.css">
+    <link rel="stylesheet" href="./estilos/navbar.css">
 </head>
 <body>
     <div class="cabecera">
         <div class="cabecera-logos">
-            <div class="cabecera-logo-contenedor"><img src="./logo_cdmx.png" alt="logo_cdmx"></div>
-            <div class="cabecera-logo-contenedor"><img src="./logo_educación.png" alt="logo_educación"></div>
-            <div class="cabecera-logo-contenedor"><img src="./Logo-TecNM.png" alt="logo_cdmx"></div>
+            <div class="cabecera-logo-contenedor"><img src="./imagenes/logo_cdmx.png" alt="logo_cdmx"></div>
+            <div class="cabecera-logo-contenedor"><img src="./imagenes/logo_educación.png" alt="logo_educación"></div>
+            <div class="cabecera-logo-contenedor"><img src="./imagenes/Logo-TecNM.png" alt="logo_cdmx"></div>
         </div>
         <div class="cabecera-logos-2">
             <div style="height: 100%; width:100%; ">El resto irá aquí</div>
