--- a/index.html
+++ b/index.html
@@ -1,103 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador Investigador</title>
-    <link rel="stylesheet" href="./estilos/formularioRegistro.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=B612:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./estilos/navbar.css">
+    <link rel="stylesheet" href="./Estilos/estiloGeneral.css">
+    <title>Propiedad Intelectual</title>
 </head>
+
 <body>
-    <div class="cabecera">
-        <div class="cabecera-logos">
-            <div class="cabecera-logo-contenedor"><img src="./imagenes/logo_cdmx.png" alt="logo_cdmx"></div>
-            <div class="cabecera-logo-contenedor"><img src="./imagenes/logo_educación.png" alt="logo_educación"></div>
-            <div class="cabecera-logo-contenedor"><img src="./imagenes/Logo-TecNM.png" alt="logo_cdmx"></div>
-        </div>
-        <div class="cabecera-logos-2">
-            <div style="height: 100%; width:100%; ">El resto irá aquí</div>
-        </div>
-    </div>
-    <hr style="background-color: rgba(23, 40, 135, 0);">
-    <nav></nav>
-    <div>
-
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-    <div class="formulario-registro">
-        <form action="/">
-        <div class="formulario">
-            <div class="formulario-registro-datos">
+    <div class="mainContainer">
+        <div class="navGob">
+            <a href="https://www.gob.mx/gobierno" target="_blank">
+                <img src="./imagenes/1.png" alt="Gobierno de México" style="height: 2em; width:80%;">
+            </a>
+            <ul>
+                <li>
+                    <a href="https://www.gob.mx/gobierno" target="_blank">
+                        Gobierno
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.participa.gob.mx/" target="_blank">
+                        Participa
+                    </a>
+                </li>
+                <li>
+                    <a href="https://datos.gob.mx/" target="_blank">
+                        Datos
+                    </a>
+                </li>
+                <li>
+                    <a class="nav-link active" href="https://www.gob.mx/busqueda" target="_blank">
+                        <img src="./imagenes/lupa.png" alt="busqueda" style=" height: 40px;">
+                    </a>
+                </li>
+            </ul>
+        </div><!-- navGob -->
+        <div class="navContainer1">
+            <img src="./imagenes/pleca-gob1-removebg-preview.png" alt="">
+            <img src="./imagenes/pleca-gob2.png" alt="">
+            <img src="./imagenes/pleca_tecnm_octubre.jpg" alt="">
+            <div class="navContainer1a">
+                <img src="./imagenes/microsoft_teams.png" alt="">
+                <img src="./imagenes/correo-icono.png" alt="">
+                <img src="./imagenes/calendario-icono.png" alt="">
+                <img src="./imagenes/china-icono.png" alt="">
+                <img src="./imagenes/usa-icono.png" alt="">
+                <img src="./imagenes/francia-icono.png" alt="">
+                <img src="./imagenes/mexico-icono.png" alt="">
                 <br>
-                <label for="nombre">Escribe tu nombre: </label><br><br>
-                <input type="text" id="nommbre" placeholder="Escribe aquí tu nombre" required>
-                <br><br>
-                <label for="entidad">Instituto o Empresa: </label><br><br>
-                <input type="text" id="nommbre" placeholder="Escribe aquí tu entidad" required>
-                <br><br>
-                <label for="tiporegistro">Tipo de registro: </label><br><br>
-                <select name="tiporegistro" id="tiporegistro">
-                    <option value="Marcas">Marcas</option>
-                    <option value="Patentes">Patentes</option>
-                    <option value="Obras">Obras</option>
-                    <option value="Reservas de derechos">Reservas de derechos</option>
-                </select>
-                <br><br>
-                <label for="archivo1">Por favor sube tu e.firma</label>
-                <br><br>
-                <input type="file" name="archivosubido" value="e.firma">
-                <br><br>
+                <img src="./imagenes/ojo-icono.png" alt="">
+                <img src="./imagenes/png-clipart-computer-icons-font-circle-monochrome-half-removebg-preview.png" alt=""
+                    style="height: 40px;">
+                <a href="">
+                    A+
+                </a>
+                <a href="">
+                    A-
+                </a>
+                <a href="">
+                    A
+                </a>
             </div>
-            <div class="formulario-registro-datos">
+
+        </div><!-- navContainer1 -->
+
+
+
+<!-- inicio y Login  -->
+        <div class="Contenedorprincipal">
+            <div class="headerstyle">
+            </div>
+
+
+
+            <div class="contenedorIntroduccion">
+                <img class="impi" src="./imagenes/impi.png">
+            </div>
+
+            <div class="contenedorNoticia">
+                <h1>OTROS LINKS</h1>
+            </div>
+
+            <div class="contenedorLogin">
+                <a href="#" class="botonlogin">Interesado</a>
+                <a href="#" class="botonlogin">Administrador</a>
+                <div class="loginuser">
+                    <label> Correo</label><input class="campo" type="text" name="user" id="usercampo">
+                </div>
+                <div class="loginpass">
+                    <label>Contraseña:</label><input class="campo" type="password" name="contra" id="contraseñacampo">
+                </div>
+                <a href="adminInvestigador.html" class="botonlogin">Acceder</a>
+                <a href="Vistas/Registro.php" class="botonlogin">Registrarse</a>
+                <a href="#" class="botonlogin">¿Olvidaste tu contraseña?</a>
+            </div>
+            <div class="contenedorLink">
+                <div class="contenedorLinkPatente">
+                    <a class="linkpatentes" href="#">Conoce si tu investigación, invento, marca, etc. ya fue
+                        patentada</a>
+                </div>
+            </div>
+            
+        </div>
+
+<br><br><br><br><br>
+<!-- Fin del inicio y login -->
+    </div><!-- mainContainer -->
+    <div class="footTecn">
+        <p class="mbr-text" style="color:#fff">
+            <strong>Dirección</strong>
+            <br>
+            <br>Av. Universidad 1200, Col. Xoco, Ciudad de México, Alcaldía Benito Juárez C.P. 03330<br>
+            <br>
+            <br><strong>Contacto</strong>&nbsp;<br>
+            <br>Email: contacto@tecnm.mx&nbsp;<br>Conmutador: 55 36002500 <br>
+        </p>
+        <p class="mbr-text"><strong>Enlaces</strong><br>
+            <br>
+            <a style="color:#fff" href="http://portaltransparencia.gob.mx/buscador/search/search.do?method=begin">Portal
+                de Obligaciones de Transparencia</a><br>
+            <a style="color:#fff" href="http://inicio.ifai.org.mx/SitePages/ifai.aspx">INAI</a><br>
+            <br>
+            <br><strong> Número de visitas: </strong>3,173,349
+        </p>
+        <a href="?vista=Ubicacion" title="Ver Ubicación">
+            <img loading="lazy" src="./imagenes/Foto_Ubicación.jpg" alt="Ubicación" style="width:100%;">
+        </a>
+
+
+    </div>
+    <div class="copyR">
+        <div class="col-sm-6 copyright">
+            <center>
+                <p class="mbr-text mbr-fonts-style display-7">
+                    © Copyright 2022 TecNM - Todos los Derechos Reservados
+                </p>
                 <br>
-                <label for="contacto">Numero de contacto:</label><br><br>
-                <input type="number" id="contacto" placeholder="Escribe aquí tu numero de contacto" required>
-                <br><br>
-                <label for="entidad">Correo Electrónico:</label><br><br>
-                <input type="text" id="nommbre" placeholder="Escribe aquí Correo Electrónico" required>
-                <br><br>
-                <label for="tiporegistro">Región:</label><br><br>
-                <select name="tiporegistro" id="tiporegistro">
-                    <option value="Baja California">Baja California</option>
-                    <option value="Guerrero">Guerrero</option>
-                    <option value="Hidalgo">Hidalgo</option>
-                </select>
-                <br><br>
-                <label for="archivo1">Por favor sube tu archivo número 2</label>
-                <br><br>
-                <input type="file" name="archivosubido" value="e.firma">
-                <br><br>
-            </div>
+                <p class="mbr-text mbr-fonts-style display-7">
+                    <a href="https://www.gob.mx/cms/uploads/attachment/file/328462/Proyecto_Aviso_Privacidad_TecNM_16052018.pdf"
+                        target="_blank" style="text-decoration:none; color:#fff;">
+                        <span class="text-white"> Aviso de Privacidad </span>
+                    </a>
+                </p>
+                <br>
+                <p class="mbr-text mbr-fonts-style display-7">
+                    Última actualización: 29/09/2022
+                </p>
+            </center>
         </div>
-        <div class="opciones">
-            <input type="submit" value="Enviar registro">
+
+    </div><!-- footTecn -->
+    <div class="fG5" style="height: 5vh;">
+        <br>
+    </div>
+
+    <div class="footGob">
+        <div class="fG1">
+            <img src="./imagenes/1.png" alt="" style="height: 100px; ">
         </div>
-        </form>
+        <div class="fG2">
+            <h5>Enlaces</h5>
+            <ul>
+                <li>
+                    <a href="">Participa</a>
+                </li>
+                <li>
+                    <a href="">Publicaciones Oficiales</a>
+                </li>
+                <li>
+                    <a href="">Marco Jurídico</a>
+                </li>
+                <li>
+                    <a href="">Plataforma Nacional de Transparencia</a>
+                </li>
+            </ul>
+        </div>
+        <div class="fG3">
+            <h5>¿Qué es gob.mx?</h5>
+            <p> Es el portal único de trámites, información y participación ciudadana.
+                <a href="https://www.gob.mx/que-es-gobmx" target="_blank">Leer más</a>
+            </p>
+            <ul>
+                <li><a href="https://datos.gob.mx" target="_blank">Portal de datos abiertos</a></li>
+                <li><a href="https://www.gob.mx/accesibilidad" target="_blank">Declaración de accesibilidad</a></li>
+                <li><a href="https://www.gob.mx/privacidadintegral" target="_blank">Aviso de privacidad integral</a>
+                </li>
+                <li><a href="https://www.gob.mx/privacidadsimplificado" target="_blank">Aviso de privacidad
+                        simplificado</a></li>
+                <li><a href="https://www.gob.mx/terminos" target="_blank">Términos y Condiciones</a></li>
+                <li><a href="https://www.gob.mx/terminos#medidas-seguridad-informacion" target="_blank">Política de
+                        seguridad</a></li>
+                <li><a href="https://www.gob.mx/sitemap" target="_blank">Mapa de sitio</a></li>
+            </ul>
+        </div>
+        <div class="fG4">
+            <h5>
+                <a href="https://www.gob.mx/tramites/ficha/presentacion-de-quejas-y-denuncias-en-la-sfp/SFP54"
+                    target="_blank">
+                    Denuncia contra servidores públicos
+                </a>
+            </h5>
+            <h5> Síguenos en </h5>
+            <ul class="list-inline">
+                <li>
+                    <a class="social-icon facebook" target="_blank" rel="noopener" title="Enlace abre en ventana nueva"
+                        href="https://www.facebook.com/gobmexico" aria-label="Facebook de presidencia">
+                        <img src="./imagenes/fb.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a class="social-icon twitter" target="_blank" rel="noopener" title="Enlace abre en ventana nueva"
+                        href="https://twitter.com/GobiernoMX" aria-label="Twitter de presidencia">
+                        <img src="./imagenes/tw.png" alt="">
+                    </a>
+                </li>
+            </ul>
 
-
-
-
-
-
-
-
-
-        
+        </div>
+    </div><!-- footGob -->
+    <div class="fG5">
+        <br>
     </div>
 </body>
+
 </html>
