Add 2 navBars all the views

--- a/adminInvestigador.html
+++ b/adminInvestigador.html
@@ -69,6 +69,43 @@
             </div>
 
         </div><!-- navContainer1 -->
+        <div class="navContainer2">
+            <input type="text" name="buscar" id="txtBuscar" placeholder="Buscar" style="width: 30%; text-align: left; font-size: x-large;">
+            <ul>
+                <a href="#">Alumnos</a>
+                    <li></li>
+                <a href="#">Académicos</a>
+                    <li></li>
+                <a href="#">Egresados</a>
+                    <li></li>
+                <a href="#">Estadística</a>
+                    <li></li>
+                <a href="#">Transparencia TecNM</a>
+                    <li></li>
+                <a href="#">Protección de Datos Personales</a>
+                    <li></li>
+            </ul>
+            <a href="" style="text-decoration: none; color: #1b396a;">
+                <span>Personal de Apoyo</span>
+            </a>
+        </div><!-- navContainer2 -->
+        <div class="navContainer3">
+            <ul>
+                <a href="#"><img src="./imagenes/casitaIcon.png" alt="index" style="width: 12%; margin: 0 -8em;"></a>
+                <a href="#">Admisión</a>
+                    <li></li>
+                <a href="#">Oferta Educativa</a>
+                    <li></li>
+                <a href="#">Investigación</a>
+                    <li></li>
+                <a href="#">TecNM Virtual</a>
+                    <li></li>
+                <a href="#">Vinculación</a>
+                    <li></li>
+                <a href="#">Eventos y Reconocimientos</a>
+                    <li></li>
+            </ul>
+        </div><!-- navContainer3 -->
 
 
 
