--- a/registroCuenta.html
+++ b/registroCuenta.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,16 @@
     <link rel="stylesheet" href="./estilos/navbar.css">
     <title>Template</title>
 </head>
+
 <body>
     <div class="mainContainer">
         <div class="navGob">
             <a href="https://www.gob.mx/gobierno" target="_blank">
                 <img src="./imagenes/1.png" alt="Gobierno de México" style="height: 2em; width:80%;">
-            </a> 
+            </a>
             <ul>
                 <li>
-                    <a href="https://www.gob.mx/gobierno" target="_blank" >
+                    <a href="https://www.gob.mx/gobierno" target="_blank">
                         Gobierno
                     </a>
                 </li>
@@ -30,9 +32,9 @@
                     </a>
                 </li>
                 <li>
-                    <a class="nav-link active" href="https://www.gob.mx/busqueda" target="_blank"> 
+                    <a class="nav-link active" href="https://www.gob.mx/busqueda" target="_blank">
                         <img src="./imagenes/lupa.png" alt="busqueda" style=" height: 40px;">
-                    </a> 
+                    </a>
                 </li>
             </ul>
         </div><!-- navGob -->
@@ -40,7 +42,7 @@
             <img src="./imagenes/pleca-gob1-removebg-preview.png" alt="">
             <img src="./imagenes/pleca-gob2.png" alt="">
             <img src="./imagenes/pleca_tecnm_octubre.jpg" alt="">
-            <div class="navContainer1a" >
+            <div class="navContainer1a">
                 <img src="./imagenes/microsoft_teams.png" alt="">
                 <img src="./imagenes/correo-icono.png" alt="">
                 <img src="./imagenes/calendario-icono.png" alt="">
@@ -50,7 +52,8 @@
                 <img src="./imagenes/mexico-icono.png" alt="">
                 <br>
                 <img src="./imagenes/ojo-icono.png" alt="">
-                <img src="./imagenes/png-clipart-computer-icons-font-circle-monochrome-half-removebg-preview.png" alt="" style="height: 40px;">
+                <img src="./imagenes/png-clipart-computer-icons-font-circle-monochrome-half-removebg-preview.png" alt=""
+                    style="height: 40px;">
                 <a href="">
                     A+
                 </a>
@@ -64,20 +67,21 @@
 
         </div><!-- navContainer1 -->
         <div class="navContainer2">
-            <input type="text" name="buscar" id="txtBuscar" placeholder="Buscar" style="width: 30%; text-align: left; font-size: x-large;">
+            <input type="text" name="buscar" id="txtBuscar" placeholder="Buscar"
+                style="width: 30%; text-align: left; font-size: x-large;">
             <ul>
                 <a href="#">Alumnos</a>
-                    <li></li>
+                <li></li>
                 <a href="#">Académicos</a>
-                    <li></li>
+                <li></li>
                 <a href="#">Egresados</a>
-                    <li></li>
+                <li></li>
                 <a href="#">Estadística</a>
-                    <li></li>
+                <li></li>
                 <a href="#">Transparencia TecNM</a>
-                    <li></li>
+                <li></li>
                 <a href="#">Protección de Datos Personales</a>
-                    <li></li>
+                <li></li>
             </ul>
             <a href="" style="text-decoration: none; color: #1b396a;">
                 <span>Personal de Apoyo</span>
@@ -87,54 +91,63 @@
             <ul>
                 <a href="#"><img src="./imagenes/casitaIcon.png" alt="index" style="width: 12%; margin: 0 -8em;"></a>
                 <a href="#">Admisión</a>
-                    <li></li>
+                <li></li>
                 <a href="#">Oferta Educativa</a>
-                    <li></li>
+                <li></li>
                 <a href="#">Investigación</a>
-                    <li></li>
+                <li></li>
                 <a href="#">TecNM Virtual</a>
-                    <li></li>
+                <li></li>
                 <a href="#">Vinculación</a>
-                    <li></li>
+                <li></li>
                 <a href="#">Eventos y Reconocimientos</a>
-                    <li></li>
+                <li></li>
             </ul>
         </div><!-- navContainer3 -->
     </div><!-- mainContainer -->
 
 
-<!-- Aqui va lo principal -->
+    <!-- Aqui va lo principal -->
+
+
+    <br>
+    <fieldset class="contenedorFieldset">
+
+        <form>
+            <div class="contenedorRegistro">
+                <div class=" camporegistro1">
+                    <label> Nombre:</label>
+                    <input class="camporegistroin" type="text">
+                </div>
+
+                <div class=" camporegistro2">
+                    <label>Apellido Paterno:</label>
+                    <input class="camporegistroin" type="text">
+                </div>
+
+                <div class=" camporegistro3">
+                    <label>Apellido Materno:</label>
+                    <input class="camporegistroin" type="text">
+                </div>
+
+                <div class=" camporegistro4">
+                    <label>Teléfono:</label>
+                    <input class="camporegistroin" type="tel">
+                </div>
+
+                <button class="botonregistro" type="submit"> Registrar</button>
+
+            </div>
+        </form>
+
+    </fieldset>
+    <br>
 
 
 
-<fieldset >
-    <div class="contenedorRegistro">
-    <form>
-        <div class=" camporegistro1">
-            <label> Nombre</label>
-            <input class="camporegistroin1" type="text">
-        </div>
-
-        <div class=" camporegistro2">
-            <label>Apellido Paterno</label>
-            <input class="camporegistroin" type="text">
-        </div>
-
-        <div class=" camporegistro3">
-            <label>Apellido Materno</label>
-            <input class="camporegistroin" type="text">
-        </div>
-
-    </form>
-    </div>
-</fieldset>
 
 
 
-
-
-
-    
 
     <div class="footTecn">
         <p class="mbr-text" style="color:#fff">
@@ -147,26 +160,28 @@
         </p>
         <p class="mbr-text"><strong>Enlaces</strong><br>
             <br>
-            <a style="color:#fff" href="http://portaltransparencia.gob.mx/buscador/search/search.do?method=begin">Portal de Obligaciones de Transparencia</a><br>
+            <a style="color:#fff" href="http://portaltransparencia.gob.mx/buscador/search/search.do?method=begin">Portal
+                de Obligaciones de Transparencia</a><br>
             <a style="color:#fff" href="http://inicio.ifai.org.mx/SitePages/ifai.aspx">INAI</a><br>
             <br>
-            <br><strong> Número de visitas: </strong>3,173,349					
+            <br><strong> Número de visitas: </strong>3,173,349
         </p>
-		<a href="?vista=Ubicacion" title="Ver Ubicación">
-			<img loading="lazy" src="./imagenes/Foto_Ubicación.jpg" alt="Ubicación" style="width:100%;">
-		</a>
+        <a href="?vista=Ubicacion" title="Ver Ubicación">
+            <img loading="lazy" src="./imagenes/Foto_Ubicación.jpg" alt="Ubicación" style="width:100%;">
+        </a>
 
 
-        </div>
-        <div class="copyR">
-            <div class="col-sm-6 copyright">
-                <center>
+    </div>
+    <div class="copyR">
+        <div class="col-sm-6 copyright">
+            <center>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    © Copyright 2022  TecNM - Todos los Derechos Reservados
+                    © Copyright 2022 TecNM - Todos los Derechos Reservados
                 </p>
                 <br>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    <a href="https://www.gob.mx/cms/uploads/attachment/file/328462/Proyecto_Aviso_Privacidad_TecNM_16052018.pdf" target="_blank" style="text-decoration:none; color:#fff;">
+                    <a href="https://www.gob.mx/cms/uploads/attachment/file/328462/Proyecto_Aviso_Privacidad_TecNM_16052018.pdf"
+                        target="_blank" style="text-decoration:none; color:#fff;">
                         <span class="text-white"> Aviso de Privacidad </span>
                     </a>
                 </p>
@@ -174,13 +189,13 @@
                 <p class="mbr-text mbr-fonts-style display-7">
                     Última actualización: 29/09/2022
                 </p>
-                </center>
-            </div>
-    
+            </center>
+        </div>
+
     </div><!-- footTecn -->
     <div class="fG5" style="height: 5vh;">
         <br>
-    </div> 
+    </div>
 
     <div class="footGob">
         <div class="fG1">
@@ -205,43 +220,50 @@
         </div>
         <div class="fG3">
             <h5>¿Qué es gob.mx?</h5>
-            <p> Es el portal único de trámites, información y participación ciudadana. 
+            <p> Es el portal único de trámites, información y participación ciudadana.
                 <a href="https://www.gob.mx/que-es-gobmx" target="_blank">Leer más</a>
             </p>
             <ul>
                 <li><a href="https://datos.gob.mx" target="_blank">Portal de datos abiertos</a></li>
                 <li><a href="https://www.gob.mx/accesibilidad" target="_blank">Declaración de accesibilidad</a></li>
-                <li><a href="https://www.gob.mx/privacidadintegral" target="_blank">Aviso de privacidad integral</a></li>
-                <li><a href="https://www.gob.mx/privacidadsimplificado" target="_blank">Aviso de privacidad simplificado</a></li>
+                <li><a href="https://www.gob.mx/privacidadintegral" target="_blank">Aviso de privacidad integral</a>
+                </li>
+                <li><a href="https://www.gob.mx/privacidadsimplificado" target="_blank">Aviso de privacidad
+                        simplificado</a></li>
                 <li><a href="https://www.gob.mx/terminos" target="_blank">Términos y Condiciones</a></li>
-                <li><a href="https://www.gob.mx/terminos#medidas-seguridad-informacion" target="_blank">Política de seguridad</a></li>
+                <li><a href="https://www.gob.mx/terminos#medidas-seguridad-informacion" target="_blank">Política de
+                        seguridad</a></li>
                 <li><a href="https://www.gob.mx/sitemap" target="_blank">Mapa de sitio</a></li>
-                </ul>
+            </ul>
         </div>
         <div class="fG4">
-			<h5>
-				<a href="https://www.gob.mx/tramites/ficha/presentacion-de-quejas-y-denuncias-en-la-sfp/SFP54" target="_blank">
-					Denuncia contra servidores públicos
-				</a>
-			</h5>
-			<h5> Síguenos en </h5>
-			<ul class="list-inline">
-				<li>
-				<a class="social-icon facebook" target="_blank" rel="noopener" title="Enlace abre en ventana nueva" href="https://www.facebook.com/gobmexico" aria-label="Facebook de presidencia">
-                    <img src="./imagenes/fb.png" alt="">
-				</a>
-				</li>
-				<li>
-					<a class="social-icon twitter" target="_blank" rel="noopener" title="Enlace abre en ventana nueva" href="https://twitter.com/GobiernoMX" aria-label="Twitter de presidencia">
+            <h5>
+                <a href="https://www.gob.mx/tramites/ficha/presentacion-de-quejas-y-denuncias-en-la-sfp/SFP54"
+                    target="_blank">
+                    Denuncia contra servidores públicos
+                </a>
+            </h5>
+            <h5> Síguenos en </h5>
+            <ul class="list-inline">
+                <li>
+                    <a class="social-icon facebook" target="_blank" rel="noopener" title="Enlace abre en ventana nueva"
+                        href="https://www.facebook.com/gobmexico" aria-label="Facebook de presidencia">
+                        <img src="./imagenes/fb.png" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a class="social-icon twitter" target="_blank" rel="noopener" title="Enlace abre en ventana nueva"
+                        href="https://twitter.com/GobiernoMX" aria-label="Twitter de presidencia">
                         <img src="./imagenes/tw.png" alt="">
-					</a>
-				</li>
-			</ul>
-			
+                    </a>
+                </li>
+            </ul>
+
         </div>
     </div><!-- footGob -->
     <div class="fG5">
         <br>
-    </div>  
+    </div>
 </body>
+
 </html>
