--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <label>Contraseña:</label><input class="campo" type="password" name="contra" id="contraseñacampo">
                 </div>
                 <a href="adminInvestigador.html" class="botonlogin">Acceder</a>
-                <a href="Vistas/Registro.php" class="botonlogin">Registrarse</a>
+                <a href="registroCuenta.html" class="botonlogin">Registrarse</a>
                 <a href="#" class="botonlogin">¿Olvidaste tu contraseña?</a>
             </div>
             <div class="contenedorLink">
