--- a/registroCuenta.html
+++ b/registroCuenta.html
@@ -112,6 +112,7 @@
 
     <br>
     <fieldset class="contenedorFieldset">
+        <legend class="legendf">Completa los campos</legend>
 
         <form>
             <div class="contenedorRegistro">
@@ -135,13 +136,46 @@
                     <input class="camporegistroin" type="tel">
                 </div>
 
-                <button class="botonregistro" type="submit"> Registrar</button>
+                <div class="camporegistro5">
+                    <label>Correo:</label>
+                    <input class="camporegistroin" type="email">
+                </div>
+
+                <div class="camporegistro6">
+                    <label>Contaseña:</label>
+                    <input type="password" name="passwordC" class="camporegistroin" id="passC">
+
+                </div>
+
+                <div class="camporegistro7">
+
+                    <label>Confirmar Contraseña:</label>
+                    <input type="password" name="passwordC" class="camporegistroin" id="passCC">
+
+                </div>
+
+                <div class="camporegistro8">
+                    <label>Numero de control:</label>
+                    <input type="text" class="camporegistroin">
+
+                </div>
+                <div class="camporegistro9">
+                    <label>Instituto tecnologico</label>
+                    <select name="" id="">
+                        <option value="instituto tecnologico de iztapalapa" >Instituto Tecnologico de Iztapalapa</option>
+                        <option value="instituto tecnologico de gustavo madero">Instituto Tecnologico de Gustavo Madero</option>
+                        <option value="instituto tecnologico de ecatepec" >Instituto Tecnologico de Ecatepec</option>
+                        <option value="instituto tecnologico de tlahuac">Instituto Tecnologico de Tlahuac</option>
+                    </select>
+                </div>
+                <button class="botonregistro bregistro" type="submit"> Registrar</button>
+                <button class="botonregistro blimpiar" type="reset">Limpiar</button>
 
             </div>
         </form>
 
     </fieldset>
-    <br>
+    <br><br><br>
 
 
 
