Se realizaron cambios de los capos de registro

--- a/registroCuenta.html
+++ b/registroCuenta.html
@@ -119,43 +119,52 @@
             <div  class="contenedorRegistro">
                 <div class=" camporegistro1">
                     <label> Nombre:</label>
-                    <input class="camporegistroin" id="nombre" type="text">
+                    <input class="camporegistroin" id="nombre" type="text" placeholder="Ingresa aquí tu tombre(s)">
                 </div>
 
                 <div class=" camporegistro2">
                     <label>Apellido Paterno:</label>
-                    <input class="camporegistroin" id="apellidop" type="text">
+                    <input class="camporegistroin" id="apellidop" type="text" placeholder="Ingresa aquí tu apellido paterno">
                 </div>
 
                 <div class=" camporegistro3">
                     <label>Apellido Materno:</label>
-                    <input class="camporegistroin" id="apellidom" type="text">
+                    <input class="camporegistroin" id="apellidom" type="text" placeholder="Ingresa aquí tu apellido materno">
                 </div>
 
                 <div class=" camporegistro4">
                     <label>Teléfono:</label>
-                    <input class="camporegistroin" id="telefono" type="tel">
+                    <input class="camporegistroin" id="telefono" type="tel" placeholder="Ingresa tu número celular">
                 </div>
 
                 <div class="camporegistro5">
                     <label>Correo:</label>
-                    <input class="camporegistroin" id="correo" type="email">
+                    <input class="camporegistroin" id="correo" type="email" placeholder="Registrate solo con correo institucional">
                 </div>
 
                 <div class="camporegistro6">
-                    <label>Contaseña:</label>
-                    <input type="password" name="passwordC" class="camporegistroin" id="passC">
+                    <label>Contraseña:</label>
+                    <input type="password" name="passwordC" class="camporegistroin" id="passC" placeholder="Ingresa aquí tu contraseña">
 
                 </div>
 
                 <div class="camporegistro7">
 
                     <label>Confirmar Contraseña:</label>
-                    <input type="password" name="passwordC" class="camporegistroin" id="passCC">
+                    <input type="password" name="passwordC" class="camporegistroin" id="passCC" placeholder="Ingresa de nuevo tu contraseña">
 
                 </div>
 
                 <div class="camporegistro8">
+                    <label>Rol:</label>
+                    <select name="" id="">
+                        <option value="Docente" >Personal Docente</option>
+                        <option value="Administrativo">Personal Administrativo</option>
+                        <option value="Estudiante" >Estudiante</option>
+                        <option value="Directivo">Personal Directivo</option>
+                    </select>
+
+                </div>
                     <label>RFC:</label>
                     <input type="text" class="camporegistroin" id="rfc">
                 </div>
