--- a/registroP.html
+++ b/registroP.html
@@ -112,10 +112,13 @@
         <div class="formulario-registro-datos">
             <br>
             <label for="nombre">Escribe tu nombre: </label><br><br>
-            <input type="text" id="nommbre" placeholder="Escribe aquí tu nombre" required>
+            <input type="text" id="" placeholder="Escribe aquí tu nombre" required>
             <br><br>
             <label for="entidad">Instituto o Empresa: </label><br><br>
-            <input type="text" id="nommbre" placeholder="Escribe aquí tu entidad" required>
+            <input type="text" id="" placeholder="Escribe aquí tu entidad" required>
+            <br><br>
+            <label for="entidad">Curp: </label><br><br>
+            <input type="text" id="" placeholder="Ingresa tu CURP" required>
             <br><br>
             <label for="tiporegistro">Tipo de registro: </label><br><br>
             <select name="tiporegistro" id="tiporegistro">
@@ -124,30 +127,31 @@
                 <option value="Obras">Obras</option>
                 <option value="Reservas de derechos">Reservas de derechos</option>
             </select>
-            <br><br>
-            <label for="archivo1">Por favor sube tu e.firma</label>
-            <br><br>
-            <input type="file" name="archivosubido" value="e.firma">
+            <br>
+            <a href="#">¿No sabes que tipo de registro es tu patente?</a>
             <br><br>
         </div>
         <div class="formulario-registro-datos">
             <br>
             <label for="contacto">Numero de contacto:</label><br><br>
-            <input type="number" id="contacto" placeholder="Escribe aquí tu numero de contacto" required>
+            <input type="number" id="" placeholder="Escribe aquí tu numero de contacto" required>
             <br><br>
-            <label for="entidad">Correo Electrónico:</label><br><br>
-            <input type="text" id="nommbre" placeholder="Escribe aquí Correo Electrónico" required>
+            <label for="">Correo Electrónico:</label><br><br>
+            <input type="text" id="" placeholder="Ingresa solo correos institucionales" required>
             <br><br>
-            <label for="tiporegistro">Región:</label><br><br>
-            <select name="tiporegistro" id="tiporegistro">
+            <label for="">RFC:</label><br><br>
+            <input type="text" id="" placeholder="Ingresa tu RFC aquí" required>
+            <br><br>
+            <label for="">Región:</label><br><br>
+            <select name="" id="">
                 <option value="Baja California">Baja California</option>
                 <option value="Guerrero">Guerrero</option>
                 <option value="Hidalgo">Hidalgo</option>
             </select>
             <br><br>
-            <label for="archivo1">Por favor sube tu archivo número 2</label>
+            <label for="archivo1">Por favor sube una foto de tu INE</label>
             <br><br>
-            <input type="file" name="archivosubido" value="e.firma">
+            <input type="file" name="" value="INE">
             <br><br>
         </div>
     </div>
