--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
                 <a href="adminInvestigador.html" class="botonlogin">Acceder</a>
                 <a href="registroCuenta.html" class="botonlogin">Registrarse</a>
-                <a href="#" class="botonlogin">¿Olvidaste tu contraseña?</a>
+                <a href="olvidarContraseña.html" class="botonlogin">¿Olvidaste tu contraseña?</a>
             </div>
             <div class="contenedorLink">
                 <div class="contenedorLinkPatente">
