--- a/registroCuenta.html
+++ b/registroCuenta.html
@@ -156,37 +156,19 @@
                 </div>
 
                 <div class="camporegistro8">
-                    <label>Rol:</label>
-                    <select name="" id="">
+                    <label>Rol:</label><br>
+                    <select class="camporegistroin" name="" id="">
                         <option value="Docente" >Personal Docente</option>
                         <option value="Administrativo">Personal Administrativo</option>
                         <option value="Estudiante" >Estudiante</option>
                         <option value="Directivo">Personal Directivo</option>
                     </select>
-
                 </div>
-                    <label>RFC:</label>
-                    <input type="text" class="camporegistroin" id="rfc">
-                </div>
-
-                <div class="camporegistro9">
-                    <label>CURP:</label>
-                    <input type="text" class="camporegistroin" id="curp">
-                </div>
-
-                <div class="camporegistro10">
-                    <label>INE (frente):</label>
-                    <input type="file" class="camporegistroin" id="inef">
-                </div>
-
-                <div class="camporegistro11">
-                    <label>INE (reverso):</label>
-                    <input type="file" class="camporegistroin" id="iner">
-                </div>
+    
 
                 <div class="camporegistro12">
                     <label>Instituto Tecnológico: </label>
-                    <select name="" id="tecnologico" >
+                    <select class="camporegistroin" name="" id="tecnologico" >
                         <option value=" "> Instituto Tecnológico de Acapulco </option>
                         <option value=" "> Instituto Tecnológico de Agua Prieta</option>
                         <option value=" "> Instituto Tecnológico de Aguascalientes</option>
